# goldene-sieben

./: CMakeLists.txt  README.md  card.cpp  card.h  card_collection.cpp  card_collection.h  card_value.cpp  card_value.h  color.cpp  color.h  draw.cpp  draw.h  game.cpp  game.h  player.cpp  player.h  ruleset.cpp  ruleset.h  test_Rulesets.cpp  test_card.cpp  test_card_collection.cpp  test_player.cpp
